# QFun

./: .gitignore  README.md  feynman_demo.ipynb  pyproject.toml  qfun_demo.ipynb  qfun_ml_demo.ipynb  requirements.txt  train.py  utils.py
docs/: architecture_deep.md  architecture_kan_hybrid.md  architecture_single_layer.md  paper_roadmap.md
experiments/: run_mnist_deep.py  run_mnist_kan_ablation.py  run_mnist_multiseed_ablation.py  run_mnist_single_layer.py  run_mnist_spline.py
notebooks/: 01_basics_signed_modes.ipynb  02_feynman_encoding.ipynb  03_qfan_training.ipynb  03_qfan_training_feynman_benchmark.ipynb  04_qfun_ml_demo.ipynb  05_activations_iris.ipynb  05_qfun_superposition_learning.ipynb  07_qfun_superposition_activations_tabular_suite.ipynb  08_qfun_superposition_activations_digits.ipynb  09_qfun_superposition_activation_ablation.ipynb  10_qfun_superposition_activations_mnist.ipynb  10_qfun_superposition_activations_mnist.py  10_qfun_superposition_activations_mnist_architecture.md  11_qfun_superposition_activations_mnist_deep.ipynb  11_qfun_superposition_activations_mnist_deep.py  11_qfun_superposition_activations_mnist_deep_architecture.md  12_qfun_quantum_kan_mnist_ablation.ipynb  12_qfun_quantum_kan_mnist_ablation.py  12_qfun_quantum_kan_mnist_ablation_architecture.md  Note10.py  Note10_spline.py  _path_setup.py
paper/: make_figures.py  qfun_paper.aux  qfun_paper.bbl  qfun_paper.blg  qfun_paper.out  qfun_paper.tex  references.bib
qfun/: __init__.py  _utils.py  datasets.py  encode.py  feynman_dataset.py  plot.py  quantum_learning.py  simulate.py
qfun_layers/: __init__.py  amplitude_encoding.py  qkan_block.py  signed_encoding.py
scripts/: run_feynman_benchmark.py  train_qfan_demo.py
tests/: conftest.py  test_benchmark_notebooks.py  test_datasets.py  (+5 more)
(+163 files in other folders)
