[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qfun"
version = "0.1.0"
description = "QFun – Quantum Function Approximation Network"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pennylane>=0.35",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jupyter", "ruff>=0.3", "tqdm>=4.66"]
# JAX + Optax for optional GPU/TPU training (``QuantumActivationConfig(use_jax=True)``).
# JAX is capped below 0.6 for compatibility with PennyLane's JAX integration.
# For NVIDIA GPUs, install a CUDA-enabled jaxlib per https://jax.readthedocs.io/en/latest/installation.html
gpu = ["jax>=0.4.28,<0.6", "jaxlib>=0.4.28,<0.6", "optax>=0.2"]

[tool.setuptools.packages.find]
include = ["qfun*"]

[tool.setuptools.package-data]
qfun = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
